--- a/Script.conf
+++ b/Script.conf
@@ -32,4 +32,4 @@ cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scrip
 http-request ^https:\/\/user-api-prd-mx\.wandafilm\.com script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.cookie.js, timeout=10, enabled=false, tag=万达电影
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=wanda.js
 
-hostname = music.163.com, testflight.apple.com, i.meituan.com, user-api-prd-mx.wandafilm.com, my.ruanmei.com, hweb-mbf.huazhu.com
+hostname = music.163.com, testflight.apple.com, i.meituan.com, user-api-prd-mx.wandafilm.com, my.ruanmei.com, hweb-mbf.huazhu.com, photos.adobe.io, lcs-mobile-cops.adobe.io
