--- a/Script.conf
+++ b/Script.conf
@@ -20,9 +20,7 @@ cron "10 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scr
 # Lightroom
 http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
 
-#华住会签到
-http-request https:\/\/hweb-mbf\.huazhu\.com\/api\/signIn script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/hzh/hzh.js, timeout=10, enabled=false, tag=华住会获取签到Cookie
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/hzh/hzh.js, tag=华住会
+
 
 #IT之家签到
 #http-response ^https:\/\/my\.ruanmei\.com\/api\/usersign\/getsigninfo? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ithome/ithome.cookie.js, timeout=10, enabled=false, tag=ithome.cookie.js
@@ -32,4 +30,4 @@ cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scrip
 http-request ^https:\/\/user-api-prd-mx\.wandafilm\.com script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.cookie.js, timeout=10, enabled=false, tag=万达电影
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=wanda.js
 
-hostname = music.163.com, testflight.apple.com, i.meituan.com, user-api-prd-mx.wandafilm.com, my.ruanmei.com, hweb-mbf.huazhu.com, lcs-mobile-cops.adobe.io, photos.adobe.io, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com
+hostname = music.163.com, testflight.apple.com, i.meituan.com, user-api-prd-mx.wandafilm.com, my.ruanmei.com, lcs-mobile-cops.adobe.io, photos.adobe.io, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com
