--- a/Script.conf
+++ b/Script.conf
@@ -13,21 +13,11 @@ http-request ^https?://boxjs.com(/api|/home|/sub|/my|/app|/log|/revert)?($|\/) s
 # > TF国区更新
 http-request ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js, requires-body=true, timeout=10, enabled=true, tag=TF国区下载
 
-# > 网易云音乐签到
-http-request ^https:\/\/music.163.com\/weapi\/user\/level script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,requires-body=true, enabled=true, tag=网易云Cookie获取
-cron "10 0 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js, enabled=true, tag=网易云签到
+
 
 # Lightroom
 http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
 
 
 
-#IT之家签到
-#http-response ^https:\/\/my\.ruanmei\.com\/api\/usersign\/getsigninfo? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ithome/ithome.cookie.js, timeout=10, enabled=false, tag=ithome.cookie.js
-cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ithome/ithome.js, tag=ithome.js
-
-#万达电影签到
-http-request ^https:\/\/user-api-prd-mx\.wandafilm\.com script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.cookie.js, timeout=10, enabled=false, tag=万达电影
-cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=wanda.js
-
-hostname = music.163.com, testflight.apple.com, i.meituan.com, user-api-prd-mx.wandafilm.com, my.ruanmei.com, lcs-mobile-cops.adobe.io, photos.adobe.io, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com
+hostname = testflight.apple.com, lcs-mobile-cops.adobe.io, photos.adobe.io, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com
