--- a/Script.conf
+++ b/Script.conf
@@ -20,4 +20,4 @@ http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qx
 
 
 
-hostname = testflight.apple.com, lcs-mobile-cops.adobe.io, photos.adobe.io, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com
+hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io
