--- a/Script.conf
+++ b/Script.conf
@@ -4,7 +4,7 @@
 
 [Script]
 
-# 彩云天气 Vip
+# > 彩云天气 Vip
 http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气
 
 # > 访问: http://boxjs.com管理
@@ -13,9 +13,7 @@ http-request ^https?://boxjs.com(/api|/home|/sub|/my|/app|/log|/revert)?($|\/) s
 # > TF国区更新
 http-request ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js, requires-body=true, timeout=10, enabled=true, tag=TF国区下载
 
-
-
-# Lightroom
+# > Lightroom
 http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
 
 
