--- a/Script.conf
+++ b/Script.conf
@@ -16,6 +16,39 @@ http-request ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/bui
 # Lightroom
 http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
 
+# > 微信公众号
+http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://Choler.github.io/Surge/Script/WeChat.js,tag=微信公众号广告
+
+# > 酷我音乐SVIP (By yxiaocai)
+http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js,tag=酷我音乐VIP
+
+# 酷我换肤(已经有的皮肤需要先从本地皮肤删除再换 By@ s y)
+http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/theme) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/themekuwo.js,tag=酷我换肤
+
+# > VSCO滤镜VIP
+http-response ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ requires-body=1,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/QuantumultX/File/vsco.js,tag=VSCO滤镜VIP
+
+# > 网易蜗牛读书VIP (By yxiaocai and JO2EY)
+http-response ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js,tag=网易蜗牛读书
+
+# > WPS (By eHpo)
+http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js, tag=WPS
+
+# 扫描全能王 pro
+http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js,tag=扫描全能王
+
+# > IT之家 去新闻列表广告
+http-response ^https?:\/\/api\.ithome\.com\/json\/slide\/index requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,tag=IT之家去列表广告
+http-response ^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,tag=IT之家去列表广告
+
+# > 幕布(by @superuv)
+http-response https:\/\/mubu\.com\/api\/app\/user\/info requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js,tag=幕布
+
+# > XMind思维导图
+http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/XMind.js,tag=XMind思维导图
 
 
-hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io
+
+
+
+hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, mp.weixin.qq.com, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, api.ithome.com, mubu.com, www.xmind.cn,   
