--- a/Script.conf
+++ b/Script.conf
@@ -4,6 +4,9 @@
 
 [Script]
 
+#notability
+http-response ^https:\/\/notability\.com\/subscriptions script-path=https://raw.githubusercontent.com/PoetryU/Scientist/master/Scripts/notabilityvip.js, request-body=true
+
 # > 彩云天气 Vip
 http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气
 
@@ -15,9 +18,6 @@ http-request ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/bui
 
 # Lightroom
 http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
-
-# > 微信公众号
-http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://Choler.github.io/Surge/Script/WeChat.js,tag=微信公众号广告
 
 # > 酷我音乐SVIP (By yxiaocai)
 http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js,tag=酷我音乐VIP
@@ -51,4 +51,4 @@ http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=
 
 
 
-hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, mp.weixin.qq.com, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, api.ithome.com, mubu.com, www.xmind.cn,   
+hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, api.ithome.com, mubu.com, www.xmind.cn, notability.com  
