--- a/Script.conf
+++ b/Script.conf
@@ -37,10 +37,6 @@ http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=http
 # 扫描全能王 pro
 http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js,tag=扫描全能王
 
-# > IT之家 去新闻列表广告
-http-response ^https?:\/\/api\.ithome\.com\/json\/slide\/index requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,tag=IT之家去列表广告
-http-response ^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js,tag=IT之家去列表广告
-
 # > 幕布(by @superuv)
 http-response https:\/\/mubu\.com\/api\/app\/user\/info requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js,tag=幕布
 
@@ -51,4 +47,4 @@ http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=
 
 
 
-hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, api.ithome.com, mubu.com, www.xmind.cn, notability.com  
+hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, mubu.com, www.xmind.cn, notability.com  
