--- a/Script.conf
+++ b/Script.conf
@@ -35,8 +35,8 @@ http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=http
 http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/jivei/Loon/main/CamScanner.js,tag=扫描全能王
 
 # > 幕布(by @superuv)
-http-response https:\/\/mubu\.com\/api\/app\/user\/info requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js,tag=幕布
-
+http-response https:\/\/mubu\.com\/api\/app\/user\/info requires-body=1, max-size=0, script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js,tag=幕布
+http-response https:\/\/mubu\.com\/api\/app\/user\/info url script-response-body script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js, requires-body=true, timeout=10, tag=幕布
 # > XMind思维导图
 http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/XMind.js,tag=XMind思维导图
 
