--- a/Script.conf
+++ b/Script.conf
@@ -39,6 +39,4 @@ http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=
 
 
 
-
-
-hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, www.xmind.cn, notability.com  
+hostname = testflight.apple.com, cdn-1rtb.caiyunapp.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, www.xmind.cn, notability.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net 
