--- a/Script.conf
+++ b/Script.conf
@@ -8,8 +8,8 @@
 http-response ^https:\/\/notability\.com\/subscriptions script-path=https://raw.githubusercontent.com/PoetryU/Scientist/master/Scripts/notabilityvip.js, request-body=true
 
 # > 彩云天气 Vip
-# http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气
-http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/JQWS/GuangZhuiQuanX/main/rewrite/caiyun/caiyun_svip.js, requires-body=true, timeout=10, tag=彩云天气
+http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气
+
 
 # > 访问: http://boxjs.com管理
 http-request ^https?://boxjs.com(/api|/home|/sub|/my|/app|/log|/revert)?($|\/) script-path=https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js, requires-body=true, timeout=120, enabled=true, tag=BoxJs
