--- a/Script.conf
+++ b/Script.conf
@@ -4,11 +4,11 @@
 
 [Script]
 
-#notability
-http-response ^https:\/\/notability\.com\/subscriptions script-path=https://raw.githubusercontent.com/PoetryU/Scientist/master/Scripts/notabilityvip.js, request-body=true
+#notability订阅
+http-response ^https:\/\/notability\.com\/subscriptions script-path=https://raw.githubusercontent.com/PoetryU/Scientist/master/Scripts/notabilityvip.js, request-body=true, tag=Notability订阅
 
-# > 彩云天气 Vip
-http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气
+# > 彩云天气 VIP
+http-response ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/caiyun.cookie.js, requires-body=true, timeout=10, tag=彩云天气SVIP
 
 
 # > 访问: http://boxjs.com管理
@@ -18,7 +18,7 @@ http-request ^https?://boxjs.com(/api|/home|/sub|/my|/app|/log|/revert)?($|\/) s
 http-request ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js, requires-body=true, timeout=10, enabled=true, tag=TF国区下载
 
 # Lightroom
-http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom
+http-response ^https:\/\/photos\.adobe\.io\/v2\/accounts* script-path=https://qxnav.com/rules/QuantumultX/js/yue/Lightroom.js, requires-body=true, timeout=10, tag=Lightroom高级功能
 
 # > 酷我音乐SVIP (By yxiaocai)
 http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js,tag=酷我音乐VIP
@@ -27,16 +27,16 @@ http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice)
 http-response ^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ requires-body=1,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/NobyDa/QuantumultX/File/vsco.js,tag=VSCO滤镜VIP
 
 # > 网易蜗牛读书VIP (By yxiaocai and JO2EY)
-http-response ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js,tag=网易蜗牛读书
+http-response ^https?:\/\/p\.du\.163\.com\/gain\/readtime\/info\.json requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/wnyd.js,tag=网易蜗牛读书VIP
 
 # > WPS (By eHpo)
-http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js, tag=WPS
+http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js, tag=WPSVIP
 
 # 扫描全能王 pro
-http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/jivei/Loon/main/CamScanner.js,tag=扫描全能王
+http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/jivei/Loon/main/CamScanner.js,tag=扫描全能王VIP
 
 # > XMind思维导图
-http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/XMind.js,tag=XMind思维导图
+http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/XMind.js,tag=XMind思维导图订阅
 
 
 
