--- a/Script.conf
+++ b/Script.conf
@@ -38,6 +38,7 @@ http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property
 # > XMind思维导图
 http-response https:\/\/www\.xmind\.cn\/\_res\/devices requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/XMind.js,tag=XMind思维导图订阅
 
+# > 脚本转换
+http-response ^https?:\/\/(raw|gist)\.githubusercontent.com/.*\.js$ script-path=https://raw.githubusercontent.com/Peng-YM/ScriptConverter/master/js-converter.js, requires-body=true, tag=脚本转换
 
-
-hostname = testflight.apple.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, www.xmind.cn, notability.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, biz.caiyunapp.com 
+hostname = testflight.apple.com, api.interpreter.caiyun.com, lcs-mobile-cops.adobe.io, photos.adobe.io, *.kuwo.cn, vip1.kuwo.cn, vsco.co, api.revenuecat.com, p.du.163.com, account.wps, ap*.intsig.net, www.xmind.cn, notability.com, snailsleep.net, music.snailsleep.net, community.snailsleep.net, biz.caiyunapp.com, raw.githubusercontent.com, gist.githubusercontent.com 
