--- a/test.conf
+++ b/test.conf
@@ -1,4 +1,7 @@
 [rewrite_local]
 
 
-^(https:\/\/mobile.*\.api\.mgtv\.com\/v\d\/video\/.+ource.+)(&ticket=\w{32})(.*) url 302 $1&ticket=2031287C725A39BE8D5F5E2FF31D57AB$3
+#叮咚买菜 #开屏广告 #主机名maicai.api.ddxq.mobi
+^https:\/\/maicai\.api\.ddxq\.mobi\/advert\/getAd\?ad_id url reject-dict
+#叮咚买菜 #新人弹窗
+^https:\/\/maicai\.api\.ddxq\.mobi\/homeApi\/getHomeAdPop url reject-dict
