--- a/test.conf
+++ b/test.conf
@@ -1,7 +1,4 @@
 [rewrite_local]
 
 
-#叮咚买菜 #开屏广告 #主机名maicai.api.ddxq.mobi
-^https:\/\/maicai\.api\.ddxq\.mobi\/advert\/getAd\?ad_id url reject-dict
-#叮咚买菜 #新人弹窗
-^https:\/\/maicai\.api\.ddxq\.mobi\/homeApi\/getHomeAdPop url reject-dict
+^(https:\/\/mobile.*\.api\.mgtv\.com\/v\d\/video\/.+ource.+)(&ticket=\w{32})(.*) url 302 $1&ticket=D15AAAE233DB34E296535CE23AE08FC6$3
