--- a/1.conf
+++ b/1.conf
@@ -1,3 +1,7 @@
 [rewrite_local]
 
-^http:\/\/apphw\.ddpai\.com:18080\/onroad\/api\/v1\/ad\/list url reject-dict
+# 招行掌上生活 (需卸载重装)
+开屏广告 az1mbasecc.bas.cmbchina.com
+^https?:\/\/az1mbasecc\.bas\.cmbchina\.com\/Edge\/api\/mlife\.clientface\.clientservice\.api\.advertiseService\/preCacheAdvertiseSec url reject
+设置栏目内广告 intellicc.bas.cmbchina.com
+^https?:\/\/intellicc\.bas\.cmbchina\.com\/Edge\/api\/mlife\.intelli\.render\.api\.render\/getDynamicDataSec url reject
