--- a/1.conf
+++ b/1.conf
@@ -1,6 +1,5 @@
 [rewrite_local]
 
+^https:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/SA\/advertisingClickNew\/printLog url reject-dict
 
-# > 中国电信
-^https?:\/\/cloud\.189\.cn\/include\/splash\/ url reject
-^https?:\/\/zt-app\.go189\.cn\/zt-app\/welcome\/.*?Animation url reject-img
+hostname = client.app.coc.10086.cn
