--- a/1.conf
+++ b/1.conf
@@ -1,5 +1,6 @@
 [rewrite_local]
 
-^https:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/SA\/advertisingClickNew\/printLog url reject-dict
-
-hostname = client.app.coc.10086.cn
+^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/init\/startInit url reject-200
+^https?:\/\/client\.app\.coc\.10086\.cn\/biz-orange\/DN\/explorePage\/getAdverList url reject
+# 多个悬浮窗 感谢#热心网友分享
+^https:\/\/(client\.app\.coc|h\.app\.coc|app)\.10086\.cn\/biz-orange\/DN\/emotionMarket url reject
