--- a/1.conf
+++ b/1.conf
@@ -1,4 +1,5 @@
 [rewrite_local]
 
-# > 中国广电  主机名 app.10099.com.cn
-^https?:\/\/app\.10099\.com\.cn\/contact-web\/api\/version\/getFlashScreenPage url reject-200
+# > 中国电信
+^https?:\/\/cloud\.189\.cn\/include\/splash\/ url reject
+^https?:\/\/zt-app\.go189\.cn\/zt-app\/welcome\/.*?Animation url reject-img
