--- a/1.conf
+++ b/1.conf
@@ -1,5 +1,8 @@
 [rewrite_local]
 
-# > 中国电信
-^https?:\/\/cloud\.189\.cn\/include\/splash\/ url reject
-^https?:\/\/zt-app\.go189\.cn\/zt-app\/welcome\/.*?Animation url reject-img
+
+重写
+(?=resource\?resourceUrl|upos\-sz\-staticcos) url reject
+(?=.*(hdslb\.com.*(\.zip|\.mp4)))^((?!(hdslb\.com\/bfs\/app-static\/)).)*$ url reject
+[filter_local]
+host,upos-sz-staticcos.bilivideo.com,reject
