--- a/1.conf
+++ b/1.conf
@@ -1,8 +1,4 @@
 [rewrite_local]
 
 
-重写
-(?=resource\?resourceUrl|upos\-sz\-staticcos) url reject
-(?=.*(hdslb\.com.*(\.zip|\.mp4)))^((?!(hdslb\.com\/bfs\/app-static\/)).)*$ url reject
-[filter_local]
-host,upos-sz-staticcos.bilivideo.com,reject
+^http:\/\/oss\.umetrip\.com\/fs\/advert\/polite\/ url reject
