--- a/1.conf
+++ b/1.conf
@@ -1,4 +1,5 @@
 [rewrite_local]
 
+^https:\/\/webappcfg\.paas\.cmbchina\.com\/v1\/func\/getmarketconfig url reject-dict
 
-^http:\/\/oss\.umetrip\.com\/fs\/advert\/polite\/ url reject
+hostname = webappcfg.paas.cmbchina.com
