--- a/1.conf
+++ b/1.conf
@@ -1,5 +1,6 @@
 [rewrite_local]
 
-^https:\/\/webappcfg\.paas\.cmbchina\.com\/v1\/func\/getmarketconfig url reject-dict
 
-hostname = webappcfg.paas.cmbchina.com
+^https:\/\/res\.cc\.cmbimg\.com\/fsp\/File\/AdPlatformPublic\/ url reject-dict
+
+hostname = res.cc.cmbimg.com
