--- a/1.conf
+++ b/1.conf
@@ -1,6 +1,4 @@
 [rewrite_local]
+^https:\/\/limbopro\.com\/Adguard\/Adblock4limbo\.function\.js url reject-dict
 
-
-^(https:\/\/mobile.*\.api\.mgtv\.com\/v\d\/video\/.+ource.+)(&ticket=\w{32})(.*) url 302 $1&ticket=D15AAAE233DB34E296535CE23AE08FC6$3
-
-
+hostname = limbopro.com
