--- a/1.conf
+++ b/1.conf
@@ -1,4 +1,13 @@
 [rewrite_local]
-^https:\/\/limbopro\.com\/Adguard\/Adblock4limbo\.function\.js url reject-dict
 
-hostname = limbopro.com
+# > Didi
+^https?:\/\/conf\.diditaxi\.com\.cn\/dynamic\/ url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/dynamic.js
+^https?:\/\/conf\.diditaxi\.com\.cn\/homepage\/v1\/core\? url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/page.js
+^https?:\/\/conf\.diditaxi\.com\.cn\/homepage\/v1\/other url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/dynamic.js
+^https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/mget\? url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/dynamic.js
+^https?:\/\/conf\.diditaxi\.com\.cn\/nav\/widget\? url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/dynamic.js
+^https?:\/\/guard\.sec\.xiaojukeji\.com\/api\/guard\/psg\/v2\/getShieldStatus url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/dynamic.js
+^https?:\/\/common\.diditaxi\.com\.cn\/common\/v5\/usercenter\/me\? url script-response-body https://raw.githubusercontent.com/linuszlx/JS/main/DiDi/PersonPage.js
+^https?:\/\/hd\.xiaojukeji\.com url reject
+
+hostname = conf.diditaxi.com.cn, res.xiaojukeji.com, 116.85.2.*, 123.207.209.*, 139.199.240.* ,guard.sec.xiaojukeji.com, hd.xiaojukeji.com, common.diditaxi.com.cn
