--- a/1.conf
+++ b/1.conf
@@ -1,14 +1,4 @@
 [rewrite_local]
+^https:\/\/limbopro\.com\/Adguard\/Adblock4limbo\.function\.js url reject
 
-
-# 京东比价
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-
-# 淘宝比价
-^http://.+/amdc/mobileDispatch url script-request-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-^http://.+/amdc/mobileDispatch url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.data\.get url script-response-body https://service.2ti.st/QuanX/Script/jd_tb_price/main.js
-
-
-#Hostname
-hostname = api.m.jd.com, trade-acs.m.taobao.com
+^(https:\/\/mobile.*\.api\.mgtv\.com\/v\d\/video\/.+ource.+)(&ticket=\w{32})(.*) url 302 $1&ticket=D15AAAE233DB34E296535CE23AE08FC6$3
