--- a/1.conf
+++ b/1.conf
@@ -1,2 +1,2 @@
-[rewrite_local]
-^https:\/\/rl 302 $1&ticket=$3
+[Rewrite]
+^(https:\/\/mobile.*\.api\.mgtv\.com\/v\d\/video\/.+ource.+)(&ticket=\w{32})(.*) header $1&ticket=D15AAAE233DB34E296535CE23AE08FC6$3
