--- a/1.conf
+++ b/1.conf
@@ -2,62 +2,33 @@
 #!desc=Ximalaya
 #!icon=https://github.com/Toperlock/Quantumult/raw/main/icon/Doraemon/Doraemon-1028.png
 
-[Rewrite]
+[rewrite_local]
+# 会员
+^https?:\/\/.*\.xima.*\.com\/(mobile-playpage/track/v3/baseInfo|mobile/v1/album/track|mobile/v1/album/detail|mobile-album/album/page|mobile/album/paid/info|mobile-playpage/playpage/tabs|product/detail/v1/basicInfo/dynamic) url script-request-header https://raw.githubusercontent.com/jivei/Surge/main/js/ximalaya.js
+# > 去广告重写
+^https?:\/\/.*\.xima.*\.com\/discovery-category\/customCategories url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF url reject
+^https?:\/\/.*\.xima.*\.com\/mobile-playpage\/view\/ url reject
+^https?:\/\/.*\.xima.*\.com\/chaos-notice-web\/v1\/message\/preview\/list url reject
+^https?:\/\/.*\.xima.*\.com\/social-web\/bottomTabs\/dynamicEntrance\/status url reject
+^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ url reject
+^https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) url reject
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant url reject
+^https?:\/\/.*\.xima.*\.com\/mobile-user\/unread url reject
+^https?:\/\/.*\.xima.*\.com/mobile-user/minorProtection/pop url reject
+^https?:\/\/.*\.xima.*\.com\/collector\/xl\/v\d url reject
+^https?:\/\/.*\.xima.*\.com\/butler-portal\/versionCheck url reject
+^https?:\/\/(adse\.wsa|adse|adbehavior|gslbtx|adbtse|xdcs-collector|gslbali|adxmlyse)\.xima.*\.com\/.* url reject
+^https?:\/\/.*\.xima.*\.com\/mobile\/discovery\/v\d\/location url reject
+^https?:\/\/.*\.xima.*\.com\/hotWord url reject
+^https?:\/\/.*\.xima.*\.com\/guideWord url reject
+^https?:\/\/.*\.xima.*\.com\/api\/v\d\/adRealTime url reject
+^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? url reject
+^https?:\/\/.*\.xima.*\.com\/focus-mobile\/focusPic url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
+^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
+^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
 
-# ～ XiMaLaYa_喜马拉雅_修复轮播Ad失效Bug@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF - reject
-# ～ XiMaLaYa_喜马拉雅_播放页_Live@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/mobile-playpage\/view\/ - reject
-# ～ XiMaLaYa_喜马拉雅_MyInfo红点提醒@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/chaos-notice-web\/v1\/message\/preview\/list - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽大红包Tips@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/social-web\/bottomTabs\/dynamicEntrance\/status - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽gif弹窗Ad@ddgksf2013
-^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ - reject
-# ～ XiMaLaYa_喜马拉雅_gslb@ddgksf2013
-^https?:\/\/gslb.*\.xima.*\.com\/ - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽Aged请求@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) - reject
-# ～ XiMaLaYa_喜马拉雅_部分Tab弹窗@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽红点提示@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/mobile-user\/unread - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽minor请求@ddgksf2013
-^https?:\/\/.*\.xima.*\.com/mobile-user/minorProtection/pop - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽隐私搜集@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/collector\/xl\/v\d - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽版本更新@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/butler-portal\/versionCheck - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽开屏广告@ddgksf2013
-^https?:\/\/(adse\.wsa|adse|adbehavior|xdcs-collector)\.xima.*\.com\/.* - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽位置请求@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/mobile\/discovery\/v\d\/location - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽热搜词@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/hotWord - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽搜索框定时_Ad@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/(hub)?guideWord - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽实时Ad请求@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/api\/v\d\/adRealTime - reject
-# ～ XiMaLaYa_喜马拉雅_屏蔽ting_Ad@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? - reject
+[mitm]
 
-[Script]
-
-# ～ XiMaLaYa_喜马拉雅_首页顶部去除直播@ddgksf2013
-http-response ^https?:\/\/.*\.xima.*\.com\/discovery-category\/customCategories script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_18
-
-# ～ XiMaLaYa_喜马拉雅_屏蔽首页横幅_Ad@ddgksf2013
-http-response ^https?:\/\/.*\.xima.*\.com\/focus-mobile\/focusPic script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_56
-
-# ～ XiMaLaYa_喜马拉雅_屏蔽首页动态_Ad@ddgksf2013
-http-response ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_58
-
-# ～ XiMaLaYa_喜马拉雅_屏蔽Tab页滚动_Ad@ddgksf2013
-http-response ^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_60
-
-# ～ XiMaLaYa_喜马拉雅_去除我的页面Ad_Tag@ddgksf2013
-http-response ^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_62
-
-[MITM]
-
-hostname = *.xima*.*,*.xmcdn.*
+hostname = *.xima*.*, *.xmcdn.*
