--- a/1.conf
+++ b/1.conf
@@ -1,34 +1,39 @@
-#!name=Ximalaya
-#!desc=Ximalaya
-#!icon=https://github.com/Toperlock/Quantumult/raw/main/icon/Doraemon/Doraemon-1028.png
+[Rewrite]
 
-[rewrite_local]
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF - reject
+^https?:\/\/.*\.xima.*\.com\/mobile-playpage\/view\/ - reject
+^https?:\/\/.*\.xima.*\.com\/chaos-notice-web\/v1\/message\/preview\/list - reject
+^https?:\/\/.*\.xima.*\.com\/social-web\/bottomTabs\/dynamicEntrance\/status - reject
+^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ - reject
+^https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) - reject
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant - reject
+^https?:\/\/.*\.xima.*\.com\/mobile-user\/unread - reject
+^https?:\/\/.*\.xima.*\.com/mobile-user/minorProtection/pop - reject
+^https?:\/\/.*\.xima.*\.com\/collector\/xl\/v\d - reject
+^https?:\/\/.*\.xima.*\.com\/butler-portal\/versionCheck - reject
+^https?:\/\/(adse\.wsa|adse|adbehavior|gslbtx|adbtse|xdcs-collector|gslbali|adxmlyse)\.xima.*\.com\/.* - reject
+^https?:\/\/.*\.xima.*\.com\/mobile\/discovery\/v\d\/location - reject
+^https?:\/\/.*\.xima.*\.com\/hotWord - reject
+^https?:\/\/.*\.xima.*\.com\/guideWord - reject
+^https?:\/\/.*\.xima.*\.com\/api\/v\d\/adRealTime - reject
+^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? - reject
+
+[Script]
+
 # 会员
-^https?:\/\/.*\.xima.*\.com\/(mobile-playpage/track/v3/baseInfo|mobile/v1/album/track|mobile/v1/album/detail|mobile-album/album/page|mobile/album/paid/info|mobile-playpage/playpage/tabs|product/detail/v1/basicInfo/dynamic) url script-request-header https://raw.githubusercontent.com/jivei/Surge/main/js/ximalaya.js
+http-request ^https?:\/\/.*\.xima.*\.com\/(mobile-playpage/track/v3/baseInfo|mobile/v1/album/track|mobile/v1/album/detail|mobile-album/album/page|mobile/album/paid/info|mobile-playpage/playpage/tabs|product/detail/v1/basicInfo/dynamic) script-path=https://raw.githubusercontent.com/jivei/Surge/main/js/ximalaya.js, timeout=60 ,tag=ximalaya_5
+
 # > 去广告重写
-^https?:\/\/.*\.xima.*\.com\/discovery-category\/customCategories url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF url reject
-^https?:\/\/.*\.xima.*\.com\/mobile-playpage\/view\/ url reject
-^https?:\/\/.*\.xima.*\.com\/chaos-notice-web\/v1\/message\/preview\/list url reject
-^https?:\/\/.*\.xima.*\.com\/social-web\/bottomTabs\/dynamicEntrance\/status url reject
-^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ url reject
-^https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) url reject
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant url reject
-^https?:\/\/.*\.xima.*\.com\/mobile-user\/unread url reject
-^https?:\/\/.*\.xima.*\.com/mobile-user/minorProtection/pop url reject
-^https?:\/\/.*\.xima.*\.com\/collector\/xl\/v\d url reject
-^https?:\/\/.*\.xima.*\.com\/butler-portal\/versionCheck url reject
-^https?:\/\/(adse\.wsa|adse|adbehavior|gslbtx|adbtse|xdcs-collector|gslbali|adxmlyse)\.xima.*\.com\/.* url reject
-^https?:\/\/.*\.xima.*\.com\/mobile\/discovery\/v\d\/location url reject
-^https?:\/\/.*\.xima.*\.com\/hotWord url reject
-^https?:\/\/.*\.xima.*\.com\/guideWord url reject
-^https?:\/\/.*\.xima.*\.com\/api\/v\d\/adRealTime url reject
-^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? url reject
-^https?:\/\/.*\.xima.*\.com\/focus-mobile\/focusPic url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
-^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
-^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js
+http-response ^https?:\/\/.*\.xima.*\.com\/discovery-category\/customCategories script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_7
 
-[mitm]
+http-response ^https?:\/\/.*\.xima.*\.com\/focus-mobile\/focusPic script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_25
 
-hostname = *.xima*.*, *.xmcdn.*
+http-response ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_26
+
+http-response ^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_27
+
+http-response ^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage script-path=https://github.com/ddgksf2013/Scripts/raw/master/ximalaya_json.js, requires-body=true, timeout=60 ,tag=ximalaya_json_28
+
+[MITM]
+
+hostname = *.xima*.*,*.xmcdn.*
