--- a/1.conf
+++ b/1.conf
@@ -1,3 +1,7 @@
+#!name=Ximalaya
+#!desc=Ximalaya
+#!icon=https://github.com/Toperlock/Quantumult/raw/main/icon/Doraemon/Doraemon-1028.png
+
 [Rewrite]
 
 ^https?:\/\/.*\.xima.*\.com\/discovery-feed\/focus\/queryF - reject
