--- a/1.conf
+++ b/1.conf
@@ -1,8 +1,7 @@
 
 
 
-[rewrite_local]
+[Rewrite]
 
-^https:\/\/api\.cloud\.189\.cn\/guns\/getOpenscreenBanners url reject-dict
-
-^https:\/\/ad\.21cn\.com\/fixed\/app\/adShow\.do url reject-dict
+^https:\/\/api\.cloud\.189\.cn\/guns\/getOpenscreenBanners - reject-dict
+^https:\/\/ad\.21cn\.com\/fixed\/app\/adShow\.do - reject-dict
