--- a/1.conf
+++ b/1.conf
@@ -1,7 +1,10 @@
 
 
-
-[Rewrite]
-
-^https:\/\/api\.cloud\.189\.cn\/guns\/getOpenscreenBanners - reject-dict
-^https:\/\/ad\.21cn\.com\/fixed\/app\/adShow\.do - reject-dict
+[rewrite_local]
+# 顺丰速运小程序（可莉）
+# 主机名：mcs-mimp-web.sf-express.com, ucmp.sf-express.com
+^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/integralPlanet\/getCxAdvertiseList url reject-dict
+^https:\/\/ucmp-static\.sf-express\.com\/proxy\/wxbase\/wxTicket\/wxLiveStreamInfo\?pageNo url reject-dict
+^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberGoods\/pointMallService\/goodsList url reject-dict
+^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberManage\/memberEquity\/queryRecommendEquity url reject-dict
+^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberActLengthy\/fullGiveActivityService\/fullGiveInfo url reject-dict
