--- a/1.conf
+++ b/1.conf
@@ -1,10 +1,5 @@
-
-
-[rewrite_local]
-# 顺丰速运小程序（可莉）
-# 主机名：mcs-mimp-web.sf-express.com, ucmp.sf-express.com
-^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/integralPlanet\/getCxAdvertiseList url reject-dict
-^https:\/\/ucmp-static\.sf-express\.com\/proxy\/wxbase\/wxTicket\/wxLiveStreamInfo\?pageNo url reject-dict
-^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberGoods\/pointMallService\/goodsList url reject-dict
-^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberManage\/memberEquity\/queryRecommendEquity url reject-dict
-^https:\/\/ucmp\.sf-express\.com\/proxy\/esgcempcore\/memberActLengthy\/fullGiveActivityService\/fullGiveInfo url reject-dict
+[Script]
+cron "30 10 * * *" script-path=dlm.js,timeout=300, tag=达乐美披萨
+http-request ^https:\/\/game\.dominos\.com\.cn\/gold\/game\/gameDone script-path=dlm.js,requires-body=true, timeout=10, tag=达乐美披萨获取token
+[MITM]
+hostname =game.dominos.com.cn
