--- a/1.conf
+++ b/1.conf
@@ -1,5 +1,5 @@
 [Script]
-cron "30 10 * * *" script-path=dlm.js,timeout=300, tag=达乐美披萨
-http-request ^https:\/\/game\.dominos\.com\.cn\/gold\/game\/gameDone script-path=dlm.js,requires-body=true, timeout=10, tag=达乐美披萨获取token
+cron "30 10 * * *" script-path=https://raw.githubusercontent.com/jivei/Surge/main/js/dlm.js,timeout=300, tag=达乐美披萨
+http-request ^https:\/\/game\.dominos\.com\.cn\/gold\/game\/gameDone script-path=https://raw.githubusercontent.com/jivei/Surge/main/js/dlm.js,requires-body=true, timeout=10, tag=达乐美披萨获取token
 [MITM]
 hostname =game.dominos.com.cn
