--- a/nssurge.conf
+++ b/nssurge.conf
@@ -99,7 +99,7 @@ Twitter = select, PROXY, 乌克兰节点, no-alert=0, hidden=0, include-all-prox
 新加坡节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|李氏|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
 美国节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇺🇸|美国|漂亮|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
 日本节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-乌克兰 = select, include-other-group="花儿, 纳吉, 唯兔, 网友, 私房菜", policy-regex-filter=^(?=.*((?i)🇺🇦|乌克兰|(\b(Ukraine)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0, include-all-proxies=0
+乌克兰节点 = select, include-other-group="花儿, 纳吉, 唯兔, 网友, 私房菜", policy-regex-filter=^(?=.*((?i)🇺🇦|乌克兰|(\b(Ukraine)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 # 规则修正
