--- a/nssurge.conf
+++ b/nssurge.conf
@@ -91,19 +91,19 @@ encrypted-dns-follow-outbound-mode = true
 机场3 = select, policy-path=删除汉字替换你的订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 
 Bing = select, DIRECT, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
+Emby = select, DIRECT, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
 PROXY = select, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-TikTok = select, 日本节点, 美国节点, 香港节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-Twitter = select, PROXY, 乌克兰节点, no-alert=0, hidden=0, include-all-proxies=0
+TikTok = select, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
+
 香港节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
 台湾节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇹🇼|台湾|中华民国|(\b(TW|Tai|民国|Taiwan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
 新加坡节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|李氏|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
 美国节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇺🇸|美国|漂亮|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
 日本节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-乌克兰节点 = select, include-other-group="花儿, 纳吉, 唯兔, 网友, 私房菜", policy-regex-filter=^(?=.*((?i)🇺🇦|乌克兰|(\b(Ukraine)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 # 规则修正
-RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Emby.list,DIRECT // Emby直连
+RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Emby.list,Emby // Emby直连
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list,DIRECT // 国内直连规则修正
 # 广告拦截
 RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT
@@ -126,8 +126,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY
 # ChatGPT
 RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list,美国节点
-# Twitter分流
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,乌克兰 // 乌克兰节点无广告
 # Onedrive
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OneDrive/OneDrive.list,DIRECT
 # 微软
